# haskell-view

./: .gitignore  .imdoneignore  ProfilingResults.md  TAGS  TODO.md  haskell-view.cabal  stack.yaml
app/: Main.hs  ServantServer.hs  TokenGenerator.hs
src/: GetModules.hs  Lib.hs  LibText.hs  Tokens.hs
test/: MainTest.hs  MainTestLibText.hs  MemoryTest.hs  PerformanceByteStringTest.hs  PerformanceByteStringUTF8Test.hs  PerformanceFoldOverCharsTest.hs  PerformanceLoopByteStringUTF8Test.hs  PerformanceLoopOverCharsTest.hs  PerformanceSequenceOfCharTest.hs  PerformanceTest.hs  PerformanceTextTest.hs  Spec.hs  SpecLibText.hs  SpecNew.hs  TestHelpers.hs
test/stack-project/: stack-project.cabal
test/stack-project/src/: TestMod.hs  TestMod.output
test/testdata/: FSNotify.hs  LucidDemo.hs  TestMod.hs
webclient/: README.md  elm-package.json  index.html
webclient/src/: HvCss.elm  Main.elm  Stylesheets.elm  TreeNavigation.elm
