name:                haskell-view
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/haskell-view#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, GetModules
  build-depends:       base >= 4.7 && < 5
                     , ghc
                     , ghc-paths
                     , ghc-syb-utils
                     , HaRe
                     , Cabal >=1.24 && <2.0
                     , filepath >=1.4 && <2.0
                     , directory
                     , text
                     , bytestring
                     , vector

  default-language:    Haskell2010

executable haskell-view-servant
  hs-source-dirs:      app
  main-is:             ServantServer.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-view
                     , directory
                     , either
                     , transformers
                     , aeson
                     , servant
                     , servant-server
                     , wai
                     , warp
                     , http-types
                     , bytestring
  default-language:    Haskell2010

executable performance-test
  hs-source-dirs:      test
  main-is:             PerformanceTest.hs
  other-modules:       PerformanceFoldOverCharsTest, PerformanceByteStringUTF8Test, PerformanceSequenceOfCharTest, PerformanceTextTest, PerformanceByteStringTest
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-view
                     , directory
                     , criterion
                     , text
                     , bytestring
                     , utf8-string
                     , containers
                     , vector
  default-language:    Haskell2010

executable memory-test
  hs-source-dirs:      test
  main-is:             MemoryTest.hs
  other-modules:       PerformanceByteStringUTF8Test, PerformanceSequenceOfCharTest, PerformanceTextTest, PerformanceByteStringTest
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-view
                     , directory
                     , text
                     , bytestring
                     , utf8-string
                     , containers
                     , vector
  default-language:    Haskell2010

test-suite haskell-view-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-view
                     , hspec
                     , bytestring
                     , vector

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-view
